# Estructuras-Datos2

./: .gitignore  README.md
Huffman Algorithm/: main.cpp
LCS Algorithm/Java/src/: LCS.java  Main.java
LCS Algorithm/Python/LCS_DC/: LCS.py  main.py
Search Algorithms/: README.md
Search Algorithms/C++/: main.cpp
Search Algorithms/Java/src/: Algorithms.java  Main.java
Search Algorithms/Python 3.7/src/: main.py
Servers Testing/MultiServer/: myserver.h  mythread.cpp
Servers Testing/MyFirstServer/: MyFirstServer.pro
Servers Testing/Servers/MultiServer/: myserver.cpp
Servers Testing/Servers/MyFirstServer/: main.cpp
Servers Testing/Servers/build-MultiServer-Desktop-Debug/: Makefile  MultiServer  moc_myserver.cpp  moc_mythread.cpp
Servers Testing/Servers/build-MyFirstServer-Desktop-Debug/: Makefile  MyFirstServer  moc_myserver.cpp
Servers Testing/Servers/build-SignalSocket-Desktop-Debug/: Makefile  SignalSocket  moc_sockettest.cpp
Servers Testing/SignalSocket/: sockettest.cpp  sockettest.h
Servers Testing/SocketTest/: sockettest.h
T1-DijkstraAlgorithm Server/resources/: graph.txt
T2-Design Patterns/: CMakeLists.txt  README.md  main.cpp  mainAdapter.cpp
T2-Design Patterns/Adapter Pattern/: Adapter.cpp  Adapter.h  Blender.cpp  Blender.h  CRSocketInterface.h  EuropeanSocketInterface.h  Socket.cpp  Socket.h
T2-Design Patterns/Observer Pattern/: Bookshop.cpp  Bookshop.h++  Product.cpp  Product.h++  Subject.h++
T2-Design Patterns/patron de diseño observer/: Observer.h++  Subject.h++  libreria.cpp  libreria.h++  producto.cpp  producto.h++
(+21 files in other folders)
